--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ backoff==2.2.1
 beautifulsoup4==4.12.3
 blinker==1.8.2
 blis==0.7.11
+bcrypt
 cachetools==5.5.0
 catalogue==2.0.10
 certifi==2024.7.4
