--- a/requirements.txt
+++ b/requirements.txt
@@ -1,142 +1,32 @@
-aider-chat==0.55.0
-aiohappyeyeballs==2.4.0
-aiohttp==3.10.5
-aiosignal==1.3.1
-altair==5.4.1
-annotated-types==0.7.0
-anyio==4.4.0
-attrs==24.2.0
-backoff==2.2.1
-beautifulsoup4==4.12.3
-blinker==1.8.2
-blis==0.7.11
-bcrypt
-cachetools==5.5.0
-catalogue==2.0.10
-certifi==2024.7.4
-cffi==1.17.0
-charset-normalizer==3.3.2
-click==8.1.7
-cloudpathlib==0.19.0
-colorama==0.4.6
-confection==0.1.5
-ConfigArgParse==1.7
-cymem==2.0.8
-diff-match-patch==20230430
-diskcache==5.6.3
-distro==1.9.0
-en-core-web-md==3.7.1
-filelock==3.15.4
-flake8==7.1.1
-frozenlist==1.4.1
-fsspec==2024.6.1
-gitdb==4.0.11
-GitPython==3.1.43
-grep-ast==0.3.3
-groq==0.11.0
-h11==0.14.0
-httpcore==1.0.5
-httpx==0.27.2
-huggingface-hub==0.24.6
-idna==3.8
-importlib_metadata==7.2.1
-importlib_resources==6.4.4
-Jinja2==3.1.4
-jiter==0.5.0
-json5==0.9.25
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-langcodes==3.4.0
-language_data==1.2.0
-litellm==1.44.7
-lxml==5.3.0
-marisa-trie==1.2.0
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mccabe==0.7.0
-mdurl==0.1.2
-multidict==6.0.5
-murmurhash==1.0.10
-narwhals==1.6.2
-networkx==3.2.1
-numpy==1.26.4
-openai==1.42.0
-outcome==1.3.0.post0
-packaging==24.1
-pandas==2.2.2
-pathspec==0.12.1
-pexpect==4.9.0
-pillow==10.4.0
-pip==24.2
-preshed==3.0.9
-prompt_toolkit==3.0.47
-protobuf==5.28.0
-ptyprocess==0.7.0
-pyarrow==17.0.0
-pycodestyle==2.12.1
-pycparser==2.22
-pydantic==2.8.2
-pydantic_core==2.20.1
-pydeck==0.9.1
-pyflakes==3.2.0
-Pygments==2.18.0
-pypandoc==1.13
-PyPDF2==3.0.1
-pyperclip==1.9.0
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-python-docx==1.1.2
-python-dotenv==1.0.1
-pytz==2024.1
-PyYAML==6.0.2
-referencing==0.35.1
-regex==2024.7.24
-requests==2.32.3
-rich==13.8.0
-rpds-py==0.20.0
-scipy==1.13.1
-selenium==4.24.0
-setuptools==65.5.0
-setuptools-scm==8.1.0
-shellingham==1.5.4
-simplejson==3.19.3
-six==1.16.0
-smart-open==7.0.4
-smmap==5.0.1
-sniffio==1.3.1
-sortedcontainers==2.4.0
-sounddevice==0.5.0
-soundfile==0.12.1
-soupsieve==2.6
-spacy==3.7.6
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-srsly==2.4.8
+# Core dependencies
 streamlit==1.38.0
-streamlit-authenticator
-tenacity==8.5.0
-thinc==8.2.5
-tiktoken==0.7.0
-tokenizers==0.19.1
-toml==0.10.2
-tornado==6.4.1
+streamlit-authenticator==0.2.2
+spacy==3.7.6
+en-core-web-md==3.7.1
+PyPDF2==3.0.1
+python-docx==1.1.2
+pandas==2.2.2
+pydantic==2.8.2
+python-dotenv==1.0.1
+bcrypt==4.0.1
+groq==0.11.0
+PyYAML==6.0.2
+reportlab==4.0.4
+
+# AI and NLP
+llama-cpp-python==0.2.11
+
+# Database
+sqlite3==3.35.0
+
+# Utilities
 tqdm==4.66.5
-tree-sitter==0.21.3
-tree-sitter-languages==1.10.2
-trio==0.26.2
-trio-websocket==0.11.1
-typer==0.12.5
-typing_extensions==4.12.2
-tzdata==2024.1
-ujson==5.10.0
-urllib3==2.2.2
-wasabi==1.1.3
-watchdog==4.0.2
-wcwidth==0.2.13
-weasel==0.4.1
-webdriver-manager==4.0.2
-websocket-client==1.8.0
-wrapt==1.16.0
-wsproto==1.2.0
-yarl==1.9.4
-zipp==3.20.1
+
+# Development dependencies
+flake8==7.1.0
+black==23.3.0
+pytest==7.4.0
+
+# Documentation
+sphinx==7.1.2
+sphinx-rtd-theme==1.3.0
